# perception

./: .gitignore  Makefile  README.md  pyproject.toml
config/: default.config.yaml  dev.config.yaml  prod.config.yaml
notebooks/: colab_runner.ipynb
scripts/: process_audio.py  process_video.py  train.py  visualize.py
src/audio_processor/: README.md  diarizer.py  enhancer.py  feature_extractor.py  pipeline.py
src/logging/: logging_config.py
src/model_training/: README.md  autoencoder.py  compute_stats.py  data_loader.py  inference.py  normalization.py
src/settings/: __init__.py  audio_processor_settings.py  base.py  logging_settings.py  training_settings.py  video_processor_settings.py
src/video_processor/: README.md  expression.py  identity.py  pipeline.py  pose.py
