[project]
name = "perception"
version = "0.1.0"
description = "Code for the IMPACT Lab's research on naturalistic person perception from multimodal signals."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opensmile>=2.6.0",
    "pydantic-settings>=2.11.0",
    "pytorch-lightning>=2.5.5",
    "rich>=14.2.0",
    "speechbrain>=1.0.3",
    "whisperx>=3.7.4",
]

authors = [
    { name = "Alexander Vassilev", email = "alex.is.busy.coding@gmail.com" },
]
maintainers = [
    { name = "Alexander Vassilev", email = "alex.is.busy.coding@gmail.com" },
]

license = { file = "LICENSE" }

keywords = ["audio", "speech", "signal-processing", "AI"]

classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Impact Lab" = "https://impactlab-columbia.github.io"
Repository = "https://github.com/alex-is-busy-coding/perception"

[dependency-groups]
dev = [
    "tensorboard>=2.20.0",
]
