[project]
name = "perception"
version = "0.1.0"
description = "Code for the IMPACT Lab's research on naturalistic person perception from multimodal signals."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "insightface>=0.7.3",
    "numpy<2",
    "onnxruntime>=1.23.2 ; sys_platform == 'darwin'",
    "onnxruntime-gpu>=1.23.2 ; sys_platform != 'darwin'",
    "opencv-python>=4.10.0",
    "opensmile>=2.6.0",
    "py-feat>=0.6.1",
    "pydantic-settings>=2.11.0",
    "pytorch-lightning>=2.5.5",
    "rich>=14.2.0",
    "speechbrain>=1.0.3",
    "whisperx>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

authors = [
    { name = "Alexander Vassilev", email = "alex.is.busy.coding@gmail.com" },
]
maintainers = [
    { name = "Alexander Vassilev", email = "alex.is.busy.coding@gmail.com" },
]

license = { file = "LICENSE" }

keywords = ["audio", "speech", "signal-processing", "AI"]

classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Impact Lab" = "https://impactlab-columbia.github.io"
Repository = "https://github.com/alex-is-busy-coding/perception"

[dependency-groups]
dev = [
    "tensorboard>=2.20.0",
]
